@@ -14,8 +14,9 @@ irssi-spellcheck (0.6) UNRELEASED; urgency=low
   [ Jakub Wilk ]
   * Document the split window feature.
   * Improve error handling.
+  * Refactor the language-choosing code.
 
- -- Jakub Wilk <jwilk@jwilk.net>  Wed, 27 Feb 2013 22:52:46 +0100
+ -- Jakub Wilk <jwilk@jwilk.net>  Wed, 27 Feb 2013 23:01:04 +0100
 
 irssi-spellcheck (0.5) unstable; urgency=low
 
